Fix setting window z-index

--- a/src/components/setting_window/settingWindow.module.css
+++ b/src/components/setting_window/settingWindow.module.css
@@ -9,6 +9,7 @@
 @value mediumLarge from '../../common/sizes.css';
 
 .window {
+    z-index: 1;
     box-shadow: 0px 0px 12px 0px rgba(0,0,0,0.63);
     border-radius: 40px;
     position: fixed;
